Remove sticky footer to prevent covering content on checkout page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,7 +7,9 @@ body {
     background-color: #fff;
     background-attachment: fixed;
     background-size: cover;
-    height: calc(100vh - 164px);
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
     font-family: 'Lato';
 }
 
@@ -15,10 +17,6 @@ body {
 h3 {
     color: #fff;
     font-size: 22px;
-}
-
-.checkout-container {
-    padding-bottom: 50px !important;
 }
 
 /* -------------------------------- BLOG PAGES */
